== 1.2.1

* Added ValidationErrorCollection#shallow_errors to get all of the ValidationErrors at a given level in the error hierarchy
* Added the ability to make a credit card the default card for a customer
* Added constants for transaction statuses
* Updated Quick Start in README.rdoc to show a workflow with error checking

== 1.2.0

* Added Subscription search
* Updated production CA SSL certificate authority
* Updated credit cards to include associated subscriptions when finding in vault
* Fixed bug where we used to raise a "forged query string" exception when we were down for maintenance.

== 1.1.3

* Fixed a bug with empty search results
* Added support for appending to user agent
* Finding a customer using id as an integer will now work (even though customer ids are actually strings)

== 1.1.2

* Allow passing expiration_month and expiration_year separately
* Updated Customer.find to raise an ArgumentError if given an invalid id
* Added error code for transaction amounts that are too large
* Include Enumerable in Braintree::Errors to iterate over all validation errors
* Added processor_authorization_code attr_reader to Braintree::Transaction
* Added cvv_response_code attr_reader to Braintree::Transaction
* Added deep_errors method to Braintree::ValidationErrorCollection to get errors at every level of nesting

== 1.1.1

* Added explicit require for date to fix missing initialize (thanks jherdman[http://github.com/jherdman])
* Allow Transaction price and Subscription amount as BigDecimals (as well as Strings)
* Ruby 1.9 bug fixes (thanks Leo Shemesh)

== 1.1.0

* Recurring billing support

== 1.0.1

* Custom fields support
* Transaction status history support

== 1.0.0

* Initial release