@@ -399,7 +399,7 @@ module Braintree
     def self._create_signature # :nodoc:
       [
         :amount, :customer_id, :order_id, :payment_method_token, :type,
-        {:credit_card => [:token, :cvv, :expiration_date, :expiration_month, :expiration_year, :number]},
+        {:credit_card => [:token, :cardholder_name, :cvv, :expiration_date, :expiration_month, :expiration_year, :number]},
         {:customer => [:id, :company, :email, :fax, :first_name, :last_name, :phone, :website]},
         {:billing => [:first_name, :last_name, :company, :country_name, :extended_address, :locality, :postal_code, :region, :street_address]},
         {:shipping => [:first_name, :last_name, :company, :country_name, :extended_address, :locality, :postal_code, :region, :street_address]},
