@@ -3,7 +3,7 @@ module Braintree
     class CreditCardDetails # :nodoc:
       include BaseModule
 
-      attr_reader :bin, :card_type, :customer_location, :expiration_month,
+      attr_reader :bin, :card_type, :cardholder_name, :customer_location, :expiration_month,
         :expiration_year, :last_4, :token
 
       def initialize(attributes)
@@ -11,7 +11,7 @@ module Braintree
       end
 
       def inspect
-        attr_order = [:token, :bin, :last_4, :card_type, :expiration_date, :customer_location]
+        attr_order = [:token, :bin, :last_4, :card_type, :expiration_date, :cardholder_name, :customer_location]
         formatted_attrs = attr_order.map do |attr|
           "#{attr}: #{send(attr).inspect}"
         end
